--- a/Abonimi/abonimi.html
+++ b/Abonimi/abonimi.html
@@ -1,150 +1,151 @@
 
-<div class="container-fluid bg-trasparent my-4 p-3" style="position: relative">
-    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
-        <div class="col hp">
-            <div class="card h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg" class="card-img-top" alt="Delicious Food" />                </a>
+<!--<div class="container-fluid-sub bg-trasparent my-4 p-3" style="position: relative">-->
+<!--    <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">-->
+<!--        <div class="col hp">-->
+<!--            <div class="card-sub h-100 shadow-sm">-->
+<!--                <a href="#">-->
+<!--                    <img src="https://i.pinimg.com/originals/05/5f/34/055f3456e2ce5469494532fcc2b0f759.jpg" class="card-img-top-sub"-->
+<!--                         alt="Delicious Food" />                </a>-->
 
-                <div class="label-top shadow-sm">
-                    <a class="text-white" href="#">SALE</a>
-                </div>
-                <div class="card-body">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through;">150$</span>
-                        <span class="float-start badge rounded-pill bg-success">130$</span>
+<!--                <div class="label-top-sub shadow-sm">-->
+<!--                    <a class="text-white" href="#">SALE</a>-->
+<!--                </div>-->
+<!--                <div class="card-body-sub">-->
+<!--                    <div class="clearfix mb-3">-->
+<!--                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through;">150$</span>-->
+<!--                        <span class="float-start badge rounded-pill bg-success">130$</span>-->
 
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title">
-                        <a target="_blank" href="#">Gain Weight Plan</a>
-                    </h5>
+<!--                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>-->
+<!--                    </div>-->
+<!--                    <h5 class="card-title-sub">-->
+<!--                        <a target="_blank" href="#">Gain Weight Plan</a>-->
+<!--                    </h5>-->
 
-                    <div class="d-grid gap-2 my-4">
+<!--                    <div class="d-grid gap-2 my-4">-->
 
-                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+<!--                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>-->
 
-                    </div>
-                    <div class="clearfix mb-1">
+<!--                    </div>-->
+<!--                    <div class="clearfix mb-1">-->
 
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+<!--                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>-->
 
-                        <span class="float-end">
-              <i class="far fa-heart" style="cursor: pointer"></i>
+<!--                        <span class="float-end">-->
+<!--              <i class="far fa-heart" style="cursor: pointer"></i>-->
 
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col hp">
-            <div class="card h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg" class="card-img-top" alt="product.title" />
-                </a>
+<!--            </span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col hp">-->
+<!--            <div class="card-sub h-100 shadow-sm">-->
+<!--                <a href="#">-->
+<!--                    <img src="https://i.pinimg.com/originals/25/8d/d6/258dd6a242b6ef919cb416bbc550e939.jpg" class="card-img-top-sub" alt="product.title" />-->
+<!--                </a>-->
 
-                <div class="card-body">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success">200$</span>
+<!--                <div class="card-body-sub">-->
+<!--                    <div class="clearfix mb-3">-->
+<!--                        <span class="float-start badge rounded-pill bg-success">200$</span>-->
 
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title">
-                        <a target="_blank" href="#">Custom Meal Plan</a>
-                    </h5>
+<!--                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>-->
+<!--                    </div>-->
+<!--                    <h5 class="card-title-sub">-->
+<!--                        <a target="_blank" href="#">Custom Meal Plan</a>-->
+<!--                    </h5>-->
 
-                    <div class="d-grid gap-2 my-4">
+<!--                    <div class="d-grid gap-2 my-4">-->
 
-                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+<!--                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>-->
 
-                    </div>
-                    <div class="clearfix mb-1">
+<!--                    </div>-->
+<!--                    <div class="clearfix mb-1">-->
 
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+<!--                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>-->
 
-                        <span class="float-end">
-              <i class="far fa-heart" style="cursor: pointer"></i>
+<!--                        <span class="float-end">-->
+<!--              <i class="far fa-heart" style="cursor: pointer"></i>-->
 
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col hp">
-            <div class="card h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg" class="card-img-top" alt="product.title" />
-                </a>
+<!--            </span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col hp">-->
+<!--            <div class="card-sub h-100 shadow-sm">-->
+<!--                <a href="#">-->
+<!--                    <img src="https://i.pinimg.com/originals/a3/e3/9c/a3e39c176fcddc51bdca84e58ddb6a11.jpg" class="card-img-top-sub" alt="product.title" />-->
+<!--                </a>-->
 
-                <div class="card-body">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success">180$</span>
+<!--                <div class="card-body-sub">-->
+<!--                    <div class="clearfix mb-3">-->
+<!--                        <span class="float-start badge rounded-pill bg-success">180$</span>-->
 
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title">
-                        <a target="_blank" href="#">The 30-Day Women's Transformation Stack</a>
-                    </h5>
+<!--                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>-->
+<!--                    </div>-->
+<!--                    <h5 class="card-title-sub">-->
+<!--                        <a target="_blank" href="#">The 30-Day Women's Transformation Stack</a>-->
+<!--                    </h5>-->
 
-                    <div class="d-grid gap-2 my-4">
+<!--                    <div class="d-grid gap-2 my-4">-->
 
-                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+<!--                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>-->
 
-                    </div>
-                    <div class="clearfix mb-1">
+<!--                    </div>-->
+<!--                    <div class="clearfix mb-1">-->
 
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+<!--                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>-->
 
-                        <span class="float-end">
-              <i class="far fa-heart" style="cursor: pointer"></i>
+<!--                        <span class="float-end">-->
+<!--              <i class="far fa-heart" style="cursor: pointer"></i>-->
 
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col hp">
-            <div class="card h-100 shadow-sm">
-                <a href="#">
-                    <img src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg" class="card-img-top" alt="product.title" />
-                </a>
-                <!-- <div class="label-top shadow-sm">Asus Rog</div>  -->
-                <div class="label-top shadow-sm">
-                    <a class="text-white" href="#">SALE</a>
-                </div>
-                <div class="card-body">
-                    <div class="clearfix mb-3">
-                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through"> 180$</span>
-                        <span class="float-start badge rounded-pill bg-success"> 150$</span>
+<!--            </span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col hp">-->
+<!--            <div class="card-sub h-100 shadow-sm">-->
+<!--                <a href="#">-->
+<!--                    <img src="https://i.pinimg.com/originals/e9/bd/24/e9bd248f02d51c087314d60274b33cdb.jpg" class="card-img-top-sub" alt="product.title" />-->
+<!--                </a>-->
+<!--&lt;!&ndash;                 <div class="label-top-sub shadow-sm">Asus Rog</div>&ndash;&gt;-->
+<!--                <div class="label-top-sub shadow-sm">-->
+<!--                    <a class="text-white" href="#">SALE</a>-->
+<!--                </div>-->
+<!--                <div class="card-body-sub">-->
+<!--                    <div class="clearfix mb-3">-->
+<!--                        <span class="float-start badge rounded-pill bg-success" style="text-decoration: line-through"> 180$</span>-->
+<!--                        <span class="float-start badge rounded-pill bg-success"> 150$</span>-->
 
 
-                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>
-                    </div>
-                    <h5 class="card-title">
-                        <a target="_blank" href="#">The 30-Day Men's Transformation Stack</a>
-                    </h5>
+<!--                        <span class="float-end"><a href="#" class="small text-muted text-uppercase aff-link">reviews</a></span>-->
+<!--                    </div>-->
+<!--                    <h5 class="card-title-sub">-->
+<!--                        <a target="_blank" href="#">The 30-Day Men's Transformation Stack</a>-->
+<!--                    </h5>-->
 
-                    <div class="d-grid gap-2 my-4">
+<!--                    <div class="d-grid gap-2 my-4">-->
 
-                        <a href="#" class="btn btn-warning bold-btn">add to cart</a>
+<!--                        <a href="#" class="btn-sub btn-warning-sub bold-btn-sub">add to cart</a>-->
 
-                    </div>
-                    <div class="clearfix mb-1">
+<!--                    </div>-->
+<!--                    <div class="clearfix mb-1">-->
 
-                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>
+<!--                        <span class="float-start"><a href="#"><i class="fas fa-question-circle"></i></a></span>-->
 
-                        <span class="float-end">
+<!--                        <span class="float-end">-->
 
-<i class="far fa-heart" style="cursor: pointer"></i>
+<!--<i class="far fa-heart" style="cursor: pointer"></i>-->
 
-            </span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!--            </span>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
-<div class="small text-muted my-4">Images by <a target="_blank" href="https://www.amazon.com/">Amazon</a></div>
-<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css'>
-<link rel="stylesheet" type="text/css" href="abonimi.css">
+<!--<div class="small text-muted my-4">Images by <a target="_blank" href="https://www.amazon.com/">Amazon</a></div>-->
+<!--<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.2/css/bootstrap.min.css'>-->
+<!--<link rel="stylesheet" type="text/css" href="abonimi.css">-->
