--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -13,25 +13,25 @@
     <p>Nutricionet jane esenciale per rritjen, zhvillimin dhe mirëqenien e trupit. Ato jane substancat ushqyese qe organizmi i njeriut i nevojitet per te funksionuar ne menyre te duhur. Nutricionet mund te jene karbohidrate, proteina, yndyra, vitamina, minerale dhe uje.
         Te ushqyerit eshte thelbësore për të ruajtur shëndetin dhe mirëqenien tonë. Është e rëndësishme të kuptojmë nevojat e trupit tonë nëpërmjet fushës së ushqimit dhe të mbajmë situatën nën kontroll gjithmonë. Duke ndarë nutricionet sipas moshës, ne mund të përcaktojmë me saktësi se çfarë është e shëndetshme për të konsumuar përmes dietës së përditshme. Kjo ndihmon në sigurimin e një balanci të duhur të ushqimit dhe në mbrojtjen e shëndetit tonë në mënyrë efikase.</p>
 
-    <div class="card">
+    <div class="card-sub">
         <div class="container">
             <h4><b>Foshnjet dhe Fëmijët e Vegjël</b></h4>
             <p>2-7</p>
         </div>
     </div>
-    <div class="card">
+    <div class="card-sub">
         <div class="container">
             <h4><b>Fëmijët e Rritur dhe Adoleshentët</b></h4>
             <p>8-18</p>
         </div>
     </div>
-    <div class="card">
+    <div class="card-sub">
         <div class="container">
             <h4><b>Të Rriturit</b></h4>
             <p>19-40</p>
         </div>
     </div>
-    <div class="card">
+    <div class="card-sub">
         <div class="container">
             <h4><b>Mosha e Mesme dhe Mosha e Mëvonshme</b></h4>
             <p> 40-50 dhe 50-65 </p>
