--- a/semundjet/1.html
+++ b/semundjet/1.html
@@ -15,7 +15,7 @@
     <div class="accordion">
       <div class="card is-active">
         <a class="card__title is-active" data-toggle="collapse" href="#content1">
-          Lorem ipsum dolor
+          Hipertensioni
           <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
             <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
           </svg>
@@ -28,6 +28,8 @@
         </div>
       </div>
 
+      <!-- Repeat the following card structure 10 times -->
+      <!-- Card 2 -->
       <div class="card">
         <a class="card__title" data-toggle="collapse" href="#content2">
           Lorem ipsum dolor sit amet
@@ -43,6 +45,7 @@
         </div>
       </div>
 
+      <!-- Card 3 -->
       <div class="card">
         <h4 class="card__title" data-toggle="collapse" data-target="#content3">
           Lorem ipsum dolor sit
@@ -57,6 +60,86 @@
           </div>
         </div>
       </div>
+
+      <!-- Repeat the above card structure 9 more times -->
+      <!-- Card 4 -->
+      <div class="card">
+        <a class="card__title" data-toggle="collapse" href="#content4">
+          Lorem ipsum dolor sit amet
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+
+        <div id="content4" class="collapse" data-parent=".accordion">
+          <div class="card__content">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
+          </div>
+        </div>
+      </div>
+      
+      <div class="card">
+        <a class="card__title" data-toggle="collapse" href="#content5">
+          Lorem ipsum dolor sit amet
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+
+
+      <div id="content5" class="collapse" data-parent=".accordion">
+        <div class="card__content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
+        </div>
+      </div>
+    </div>
+      <!-- Continue repeating the card structure with appropriate content -->
+      <div class="card">
+        <a class="card__title" data-toggle="collapse" href="#content6">
+          Lorem ipsum dolor sit amet
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+
+
+      <div id="content6" class="collapse" data-parent=".accordion">
+        <div class="card__content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+        <a class="card__title" data-toggle="collapse" href="#content7">
+          Lorem ipsum dolor sit amet
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+      <div id="content7" class="collapse" data-parent=".accordion">
+        <div class="card__content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
+        </div>
+      </div>
+
+    </div>
+    <div class="card">
+        <a class="card__title" data-toggle="collapse" href="#content8">
+          Lorem ipsum dolor sit amet
+          <svg class="icon icon-keyboard_arrow_down" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path d="M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z"/>
+          </svg>
+        </a>
+      <div id="content8" class="collapse" data-parent=".accordion">
+        <div class="card__content">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, illo, vero. Blanditiis nam quae, maiores possimus totam doloribus aliquam, non, aliquid dolores cum distinctio porro, itaque recusandae ad aperiam voluptates!
+        </div>
+      </div>
+
+</div>
+
+
     </div>
   </section>
 
