--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -15,15 +15,9 @@
         Te ushqyerit eshte thelbësore për të ruajtur shëndetin dhe mirëqenien tonë. Është e rëndësishme të kuptojmë nevojat e trupit tonë nëpërmjet fushës së ushqimit dhe të mbajmë situatën nën kontroll gjithmonë. Duke ndarë nutricionet sipas moshës, ne mund të përcaktojmë me saktësi se çfarë është e shëndetshme për të konsumuar përmes dietës së përditshme. Kjo ndihmon në sigurimin e një balanci të duhur të ushqimit dhe në mbrojtjen e shëndetit tonë në mënyrë efikase.</p>
     </div>
     <div class="card">
-        <div class="container">
-            <h4><b>Foshnjet dhe Fëmijët e Vegjël</b></h4>
-            <p>2-7</p>
-        </div>
-    </div>
-    <div class="card">
-        <div class="container">
+        <div class="container" >
             <h4><b>Fëmijët e Rritur dhe Adoleshentët</b></h4>
-            <p>8-18</p>
+            <p>12-18</p>
         </div>
     </div>
     <div class="card">
@@ -38,10 +32,16 @@
             <p> 40-50 dhe 50-65 </p>
         </div>
     </div>
+    <div class="card">
+        <div class="container">
+            <h4><b> Vlerat ushqyese </b></h4>
+            <p>Fruta dhe Perime</p>
+        </div>
+    </div>
 </main>
 <nav class="day">
-    <ul class="days">
-
+    <p class="container">Fëmijët e Rritur dhe Adoleshentët (12-18)</p>
+    <ul class="days" >
         <li><a href="#dita1" >E Hene</a></li>
         <li><a href="#dita2">E Marte</a></li>
         <li><a href="#dita3">E Merkure</a></li>
@@ -52,24 +52,259 @@
         <!-- Shto ditët e tjera këtu -->
     </ul>
 </nav>
-    <section id="dita1">
+    <section id="dita1" >
         <h2>E Hene</h2>
         <ul>
-            <li>Mengjes: Omletë me perime</li>
-            <li>Dreka: Sallatë me salmon dhe avokado</li>
-            <li>Darka: Qofte me bulgur dhe perime të pjekura</li>
+            <li>Mengjes: Mjalte me fruta të freskëta të pjekura dhe qumësht.</li>
+            <li>Dreka: Spageti me salcë domatesh dhe perime (si qepë dhe speca), sallatë jeshile me avokado dhe domate.</li>
+            <li>Darka: Fileto peshku të ziera me oriz integral dhe brokoli të pjekur.</li>
         </ul>
     </section>
     <hr>
     <section id="dita2">
         <h2>E Marte </h2>
         <ul>
-            <li>Mengjes: Smoothie me fruta të freskëta dhe fara</li>
-            <li>Dreka: Peshk në furre me perime</li>
-            <li>Darka: Salcë orizi me fasule të bardha dhe gjalpë</li>
+            <li>Mengjes: Omletë me perime të hollë dhe bukë të plotë.</li>
+            <li>Dreka: Hudhër me mish të ëmbël të pjekur dhe perime të ziera.</li>
+            <li>Darka: Fruta të freskëta të pjekura. </li>
         </ul>
     </section>
     <hr>
+    <section id="dita3">
+    <h2>E Merkure </h2>
+    <ul>
+          <li>Mengjes: Fruta të freskëta si banane dhe qumësht.</li>
+          <li>Dreka: Supe me perime  </li>
+          <li>Darka: Petulla të pjekura me mish të ëmbël dhe sallatë jeshile.  </li>
+    </ul>
+   </section>
+<hr>
+<section id="dita4">
+    <h2>E Enjte</h2>
+    <ul>
+        <li>Mëngjes: Omletë me perime të hollë dhe bukë të plotë</li>
+        <li>Dreka: Spageti me salcë domatesh dhe perime (si qepë dhe speca)</li>
+        <li>Darka: Fileto pule të pjekur me karamele dhe patate të ziera</li>
+    </ul>
+</section>
+<hr>
+<section id="dita5">
+    <h2>E Premte</h2>
+    <ul>
+        <li>Mëngjes: Vezë të ziera me bukë të plotë dhe fruta të freskëta</li>
+        <li>Dreka: Hudhër me mish të ëmbël të pjekur dhe perime të ziera</li>
+        <li>Darka: Petulla të pjekura me mish të ëmbël dhe sallatë jeshile</li>
+    </ul>
+</section>
+<hr>
+<section id="dita6">
+    <h2>E Shtunë</h2>
+    <ul>
+        <li>Mëngjes: Kripë me fruta të pjekura dhe qumësht</li>
+        <li>Dreka: Oriz me perime të ziera dhe fasule të kuqe</li>
+        <li>Darka: Fileto peshku të ziera me oriz integral dhe brokoli të pjekur</li>
+    </ul>
+</section>
+<hr>
+<section id="dita7">
+    <h2>E Diel</h2>
+    <ul>
+        <li>Mëngjes: Mjalte me fruta të freskëta të pjekura dhe qumësht</li>
+        <li>Dreka: Pilaf me mish të kuq dhe perime të ndryshme të gatuar në furrë</li>
+        <li>Darka: Perime të ziera</li>
+    </ul>
+</section>
+
+
+<nav class="day">
+    <p class="container">Të Rriturit (19-40 vjeç)</p>
+    <ul class="days" >
+        <li><a href="#mosha19_40dita1" >E Hene</a></li>
+        <li><a href="#mosha19_40dita2">E Marte</a></li>
+        <li><a href="#mosha19_40dita3">E Merkure</a></li>
+        <li><a href="#mosha19_40dita4">E Enjte</a></li>
+        <li><a href="#mosha19_40dita5">E Premte</a></li>
+        <li><a href="#mosha19_40dita6">E Shtune</a></li>
+        <li><a href="#mosha19_40dita7">E Diele</a></li>
+        <!-- Shto ditët e tjera këtu -->
+    </ul>
+</nav>
+<section id="mosha19_40">
+    <h3 id="mosha19_40dita1">E Hënë</h3>
+    <ul>
+        <li>Mëngjes: Omletë me perime të hollë dhe bukë të plotë</li>
+        <li>Dreka: Hudhër me mish të ëmbël të pjekur dhe perime të ziera</li>
+        <li>Darka: Fruta të freskëta të pjekura</li>
+    </ul>
+<hr>
+    <h3 id="mosha19_40dita2">E Martë</h3>
+    <ul>
+        <li>Mëngjes: Omletë me perime të hollë dhe bukë të plotë</li>
+        <li>Dreka: Spageti me salcë domatesh dhe perime (si qepë dhe speca)</li>
+        <li>Darka: Fileto pule të pjekur me karamele dhe patate të ziera</li>
+    </ul>
+    <hr>
+    <h3 id="mosha19_40dita3">E Mërkurë</h3>
+    <ul>
+        <li>Mëngjes: Fruta të freskëta si banane dhe qumësht</li>
+        <li>Dreka: Supe me perime</li>
+        <li>Darka: Petulla të pjekura me mish të ëmbël dhe sallatë jeshile</li>
+    </ul>
+    <hr>
+    <h3 id="mosha19_40dita4">E Enjte</h3>
+    <ul>
+        <li>Mëngjes: Omletë me perime të hollë dhe bukë të plotë</li>
+        <li>Dreka: Spageti me salcë domatesh dhe perime (si qepë dhe speca)</li>
+        <li>Darka: Fileto pule të pjekur me karamele dhe patate të ziera</li>
+    </ul>
+    <hr>
+    <h3 id="mosha19_40dita5">E Premte</h3>
+    <ul>
+        <li>Mëngjes: Omletë me perime të hollë dhe bukë të plotë</li>
+        <li>Dreka: Hudhër me mish të ëmbël të pjekur dhe perime të ziera</li>
+        <li>Darka: Fruta të freskëta të pjekura</li>
+    </ul>
+    <hr>
+    <h3 id="mosha19_40dita6">E Shtunë</h3>
+    <ul>
+        <li>Mëngjes: Kripë me fruta të pjekura dhe qumësht</li>
+        <li>Dreka: Oriz me perime të ziera dhe fasule të kuqe</li>
+        <li>Darka: Fileto peshku të ziera me oriz integral dhe brokoli të pjekur</li>
+    </ul>
+    <hr>
+    <h3 id="mosha19_40dita7">E Diel</h3>
+    <ul>
+        <li>Mëngjes: Mjalte me fruta të freskëta të pjekura dhe qumësht</li>
+        <li>Dreka: Pilaf me mish të kuq dhe perime të ndryshme të gatuar në furrë</li>
+        <li>Darka: Perime të ziera</li>
+    </ul>
+</section>
+
+
+<nav class="day">
+    <p class="container">Personat mbi 50 vjeç</p>
+    <ul class="days" >
+        <li><a href="#mosha50_plus_dita1" >E Hene</a></li>
+        <li><a href="#mosha50_plus_dita2">E Marte</a></li>
+        <li><a href="#mosha50_plus_dita3">E Merkure</a></li>
+        <li><a href="#mosha50_plus_dita4">E Enjte</a></li>
+        <li><a href="#mosha50_plus_dita5">E Premte</a></li>
+        <li><a href="#mosha50_plus_dita6">E Shtune</a></li>
+        <li><a href="#mosha50_plus_dita7">E Diele</a></li>
+        <!-- Shto ditët e tjera këtu -->
+    </ul>
+</nav>
+<section id="mosha50_plus">
+    <h3 id="mosha50_plus_dita1">E Hënë</h3>
+    <ul>
+        <li>Mëngjes: Joghurt me fruta të pjekura dhe gjalpë kokosi</li>
+        <li>Dreka: Supë misri me perime dhe përzierje druri</li>
+        <li>Darka: Salmë peshku me patate të ziera dhe sallatë me avokado</li>
+    </ul>
+    <hr>
+    <h3 id="mosha50_plus_dita2">E Martë</h3>
+    <ul>
+        <li>Mëngjes: Omletë me perime të ndryshme dhe bukë të plotë</li>
+        <li>Dreka: Pule pjekur me limon dhe erëza, oriz basmati dhe brokoli të pjekur</li>
+        <li>Darka: Qumesht i ngrohtë me miell orizi dhe mjaltë</li>
+    </ul>
+    <hr>
+    <h3 id="mosha50_plus_dita3">E Mërkurë</h3>
+    <ul>
+        <li>Mëngjes: Fruta të ndryshme të freskëta dhe një gotë uji të ngrohtë me limon</li>
+        <li>Dreka: Tortilje me perime dhe avokado</li>
+        <li>Darka: Peshk orizi me perime të ziera dhe limon</li>
+    </ul>
+    <hr>
+    <h3 id="mosha50_plus_dita4">E Enjte</h3>
+    <ul>
+        <li>Mëngjes: Muesli me qumësht të hollë dhe një mollë të pjekur</li>
+        <li>Dreka: Salcë domatesh me makarona të integruara dhe fasule të kuqe</li>
+        <li>Darka: Supë pule me perime të ziera dhe bukë të plotë</li>
+    </ul>
+    <hr>
+    <h3 id="mosha50_plus_dita5">E Premte</h3>
+    <ul>
+        <li>Mëngjes: Jogurt me mjaltë dhe arra të theksuara</li>
+        <li>Dreka: Perime të pjekura me hudhër dhe ullinj, dhe peshk gjelle me limon</li>
+        <li>Darka: Risotto me kungull dhe farë quinoa</li>
+    </ul>
+    <hr>
+    <h3 id="mosha50_plus_dita6">E Shtunë</h3>
+    <ul>
+        <li>Mëngjes: Omeletë me djathë dhe perime të ndryshme</li>
+        <li>Dreka: Oriz basmati me kërpudha dhe perime të ziera</li>
+        <li>Darka: Sallatë greke me feta dhe veze të ziera</li>
+    </ul>
+    <hr>
+    <h3 id="mosha50_plus_dita7">E Diel</h3>
+    <ul>
+        <li>Mëngjes: Toast me avokado dhe vezë të ziera</li>
+        <li>Dreka: Supë pule me perime dhe bukë të plotë</li>
+        <li>Darka: Pule pjekur me lëpirës dhe patate të ziera</li>
+    </ul>
+</section>
+
+<nav class="day">
+    <p class="container">Vlerat Ushqyese</p>
+    <ul class="days" >
+        <li><a href="#Fruta" >Fruta </a></li>
+        <li><a href="#Perime">Perime</a></li>
+    </ul>
+</nav>
+
+<section id="Fruta">
+    <ul>
+        <li>
+            <img src="apple.png" alt="Molla">
+            <strong>Mollë:</strong> Përmban fibra, vitaminë C, potas, dhe antioksidantë.
+        </li>
+        <li>
+            <img src="portokall.png" alt="Portokall">
+            <strong>Portokall:</strong> Burim i mirë i vitaminës C, folatit dhe kaliumit.
+        </li>
+        <li>
+            <img src="banane.png" alt="Banane">
+            <strong>Banane:</strong> Mbushur me karbohidrate, vitaminë B6, potas dhe fibra.
+        </li>
+        <li>
+            <img src="kumbull.png" alt="Kumbull">
+            <strong>Kumbull:</strong> Përmban vitaminë A, vitaminë C, fibra dhe kalium.
+        </li>
+        <li>
+            <img src="qershi.png" alt="Qershi">
+            <strong>Qershi:</strong> I pasur me vitaminë C, antioksidantë dhe fibra.
+        </li>
+    </ul>
+</section>
+<hr>
+<section id="Perime">
+
+    <ul>
+        <li>
+            <img src="brokoli.jpg" alt="Brokoli">
+            <strong>Brokoli:</strong> Burim i mirë i vitaminës K, vitaminë C, fibra dhe folate.
+        </li>
+        <li>
+            <img src="karrot.jpg" alt="Karrot">
+            <strong>Karrot:</strong> Përmban beta-karoten, vitaminë A, fibra dhe kalium.
+        </li>
+        <li>
+            <img src="domate.jpg" alt="Domate">
+            <strong>Domate:</strong> I pasur me vitaminë C, vitaminë K, kalium dhe likopen (një antioksidant).
+        </li>
+        <li>
+            <img src="speca.jpg" alt="Speca">
+            <strong>Speca:</strong> Përmban vitaminë C, fibra dhe antioksidantë të tjerë.
+        </li>
+        <li>
+            <img src="avokado.jpg" alt="Avokado">
+            <strong>Avokado:</strong> Mbushur me yndyrna të shëndetshme, fibra, vitaminë K dhe kalium.
+        </li>
+    </ul>
+</section>
+
+
     <!-- Shto më shumë seksione për ditët e tjera -->
 </main>
 <footer>
