--- a/Nutricion/border.html
+++ b/Nutricion/border.html
@@ -14,33 +14,33 @@
     <p >Nutricionet jane esenciale per rritjen, zhvillimin dhe mirëqenien e trupit. Ato jane substancat ushqyese qe organizmi i njeriut i nevojitet per te funksionuar ne menyre te duhur. Nutricionet mund te jene karbohidrate, proteina, yndyra, vitamina, minerale dhe uje.
         Te ushqyerit eshte thelbësore për të ruajtur shëndetin dhe mirëqenien tonë. Është e rëndësishme të kuptojmë nevojat e trupit tonë nëpërmjet fushës së ushqimit dhe të mbajmë situatën nën kontroll gjithmonë. Duke ndarë nutricionet sipas moshës, ne mund të përcaktojmë me saktësi se çfarë është e shëndetshme për të konsumuar përmes dietës së përditshme. Kjo ndihmon në sigurimin e një balanci të duhur të ushqimit dhe në mbrojtjen e shëndetit tonë në mënyrë efikase.</p>
     </div>
-    <div class="card">
+    <div class="card" onclick="scrollToFemije()">
         <div class="container" >
-            <h4><b>Fëmijët e Rritur dhe Adoleshentët</b></h4>
+            <h4><a href="#femij" >Fëmijët e Rritur dhe Adoleshentët</a></h4>
             <p>12-18</p>
         </div>
     </div>
     <div class="card">
-        <div class="container">
-            <h4><b>Të Rriturit</b></h4>
+        <div class="container" >
+            <h4><a href="#19-40">Të Rriturit</a></h4>
             <p>19-40</p>
         </div>
     </div>
     <div class="card">
         <div class="container">
-            <h4><b>Mosha e Mesme dhe Mosha e Mëvonshme</b></h4>
+            <h4><a href="#mosha">Mosha e Mesme dhe Mosha e Mëvonshme</a></h4>
             <p> 40-50 dhe 50-65 </p>
         </div>
     </div>
     <div class="card">
         <div class="container">
-            <h4><b> Vlerat ushqyese </b></h4>
+            <h4><a href="#vlera"> Vlerat ushqyese </a></h4>
             <p>Fruta dhe Perime</p>
         </div>
     </div>
 </main>
 <nav class="day">
-    <p class="container">Fëmijët e Rritur dhe Adoleshentët (12-18)</p>
+    <p class="container" id="femij" >Fëmijët e Rritur dhe Adoleshentët (12-18)</p>
     <ul class="days" >
         <li><a href="#dita1" >E Hene</a></li>
         <li><a href="#dita2">E Marte</a></li>
@@ -117,7 +117,7 @@
 
 
 <nav class="day">
-    <p class="container">Të Rriturit (19-40 vjeç)</p>
+    <p class="container" id="19-40">Të Rriturit (19-40 vjeç)</p>
     <ul class="days" >
         <li><a href="#mosha19_40dita1" >E Hene</a></li>
         <li><a href="#mosha19_40dita2">E Marte</a></li>
@@ -182,7 +182,7 @@
 
 
 <nav class="day">
-    <p class="container">Personat mbi 50 vjeç</p>
+    <p class="container" id="mosha">Personat mbi 50 vjeç</p>
     <ul class="days" >
         <li><a href="#mosha50_plus_dita1" >E Hene</a></li>
         <li><a href="#mosha50_plus_dita2">E Marte</a></li>
@@ -246,7 +246,7 @@
 </section>
 
 <nav class="day">
-    <p class="container">Vlerat Ushqyese</p>
+    <p class="container" id="vlera">Vlerat Ushqyese</p>
     <ul class="days" >
         <li><a href="#Fruta" >Fruta </a></li>
         <li><a href="#Perime">Perime</a></li>
@@ -254,58 +254,125 @@
 </nav>
 
 <section id="Fruta">
-    <ul>
-        <li>
+    <div class="gallery1">
+        <div class="image">
             <img src="apple.png" alt="Molla">
-            <strong>Mollë:</strong> Përmban fibra, vitaminë C, potas, dhe antioksidantë.
-        </li>
-        <li>
-            <img src="portokall.png" alt="Portokall">
-            <strong>Portokall:</strong> Burim i mirë i vitaminës C, folatit dhe kaliumit.
-        </li>
-        <li>
-            <img src="banane.png" alt="Banane">
-            <strong>Banane:</strong> Mbushur me karbohidrate, vitaminë B6, potas dhe fibra.
-        </li>
-        <li>
+            <div class="caption">
+                <ul>
+                    <li>Pasuri e lartë në vitaminë C.</li>
+                    <li>Burim i mirë i fibrave ushqimore.</li>
+                    <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="image">
             <img src="kumbull.png" alt="Kumbull">
-            <strong>Kumbull:</strong> Përmban vitaminë A, vitaminë C, fibra dhe kalium.
-        </li>
-        <li>
+            <div class="caption">
+                <ul>
+                <li>Pasuri e lartë në vitaminë C.</li>
+                <li>Burim i mirë i fibrave ushqimore.</li>
+                <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                </ul>
+            </div>
+        </div>
+        <div class="image">
             <img src="qershi.png" alt="Qershi">
-            <strong>Qershi:</strong> I pasur me vitaminë C, antioksidantë dhe fibra.
-        </li>
-    </ul>
+            <div class="caption">
+                <ul>
+                <li>Pasuri e lartë në vitaminë C.</li>
+                <li>Burim i mirë i fibrave ushqimore.</li>
+                <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="gallery2">
+    <div class="image">
+        <img src="portokall.png" alt="Portokall">
+        <div class="caption">
+            <ul>
+                <li>Pasuri e lartë në vitaminë C.</li>
+                <li>Burim i mirë i fibrave ushqimore.</li>
+                <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+            </ul>
+        </div>
+    </div>
+    <div class="image">
+        <img src="banane.png" alt="Banane">
+        <div class="caption">
+            <ul>
+                <li>Pasuri e lartë në vitaminë C.</li>
+                <li>Burim i mirë i fibrave ushqimore.</li>
+                <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 </section>
 <hr>
 <section id="Perime">
+    <div class="gallery1">
 
-    <ul>
-        <li>
-            <img src="brokoli.jpg" alt="Brokoli">
-            <strong>Brokoli:</strong> Burim i mirë i vitaminës K, vitaminë C, fibra dhe folate.
-        </li>
-        <li>
-            <img src="karrot.jpg" alt="Karrot">
-            <strong>Karrot:</strong> Përmban beta-karoten, vitaminë A, fibra dhe kalium.
-        </li>
-        <li>
-            <img src="domate.jpg" alt="Domate">
-            <strong>Domate:</strong> I pasur me vitaminë C, vitaminë K, kalium dhe likopen (një antioksidant).
-        </li>
-        <li>
-            <img src="speca.jpg" alt="Speca">
-            <strong>Speca:</strong> Përmban vitaminë C, fibra dhe antioksidantë të tjerë.
-        </li>
-        <li>
-            <img src="avokado.jpg" alt="Avokado">
-            <strong>Avokado:</strong> Mbushur me yndyrna të shëndetshme, fibra, vitaminë K dhe kalium.
-        </li>
-    </ul>
+    <div class="image">
+        <img src="domate.png" alt="Domate">
+        <div class="caption">
+            <ul>
+                <li>Pasuri e lartë në vitaminë C.</li>
+                <li>Burim i mirë i fibrave ushqimore.</li>
+                <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+            </ul>
+        </div>
+    </div>
+        <div class="image">
+            <img src="patate.png" alt="Patate">
+            <div class="caption">
+                <ul>
+                    <li>Pasuri e lartë në vitaminë C.</li>
+                    <li>Burim i mirë i fibrave ushqimore.</li>
+                    <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="image">
+            <img src="brokoli.png" alt="Brokoli">
+            <div class="caption">
+                <ul>
+                    <li>Pasuri e lartë në vitaminë C.</li>
+                    <li>Burim i mirë i fibrave ushqimore.</li>
+                    <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+            <div class="gallery2">
+                <div class="image">
+                    <img src="speca.png" alt="Speca">
+                    <div class="caption">
+                        <ul>
+                            <li>Pasuri e lartë në vitaminë C.</li>
+                            <li>Burim i mirë i fibrave ushqimore.</li>
+                            <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="image">
+                    <img src="avokato.png" alt="Avokado">
+                    <div class="caption">
+                        <ul>
+                            <li>Pasuri e lartë në vitaminë C.</li>
+                            <li>Burim i mirë i fibrave ushqimore.</li>
+                            <li>Përmban antioksidantë të quajtur flavonoidë.</li>
+                        </ul>
+                    </div>
+                </div>
+          </div>
 </section>
-
-
     <!-- Shto më shumë seksione për ditët e tjera -->
+
 </main>
 <footer>
     <p>Copyright © 2024 /Nutrition</p>
